# advanced_c_cpp

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  README.rst  codecov.yml  compile_commands.json  file_generator.c  hw_test.cpp  main.c  padArrayVectors.c  padArrayVectors.h  pad_array_vectors.c  pad_array_vectors.h  read_file.c  stress_tests.sh  travis.yml  vector.c  vector.h
.github/workflows/: ci.yml
cmd/: CMakeLists.txt  main.c
cmd/texts/: test.txt
examples/: CMakeLists.txt  file_generator.c  main.c
linters/: run.sh
project/include/: pad_array_vectors.h
project/src/: main.c  pad_array_vectors.c
src/: CMakeLists.txt
src/file_reader/: CMakeLists.txt  file_reader.c  file_reader.h
src/file_word_searcher/: file_word_searcher.h
src/file_word_searcher/async/: CMakeLists.txt  file_word_searcher.c
src/file_word_searcher/sync/: CMakeLists.txt  file_word_searcher.c
src/searcher/: CMakeLists.txt  searcher.c  searcher.h
tests/: CMakeLists.txt  hw_test.cpp  stress_tests.sh
tests/stress_tests/async/: CMakeLists.txt  async.c
tests/stress_tests/sync/: CMakeLists.txt  sync.c
tests/unit/: CMakeLists.txt
tests/unit/file_reader/: CMakeLists.txt  file_reader.cpp  main.cpp
tests/unit/file_word_searcher/: CMakeLists.txt  file_word_searcher.cpp
tests/unit/file_word_searcher/texts/: test.txt
tests/unit/searcher/: CMakeLists.txt  searcher.cpp
tests/utils/: CMakeLists.txt  file_generator.cpp  file_generator.h  main.cpp
